--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 driverClassName=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/db?useSSL=true
+url=jdbc:postgresql://localhost:5432/med
 username=meduser
 password=superpw
