--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <version>3.0.5</version>
         </dependency>
 <!--        <dependency>-->
+<!--            <groupId>commons-io</groupId>-->
+<!--            <artifactId>commons-io</artifactId>-->
+<!--            <version>2.11.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
 <!--            <groupId>com.sun.xml.bind</groupId>-->
 <!--            <artifactId>jaxb-impl</artifactId>-->
 <!--            <version>2.2.5</version>-->
