Добавлено автозаполнение финансирования следующего месяца и его перерасчет

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DATABASE
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/med
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_med
 spring.datasource.username=meduser
 spring.datasource.password=superpw
 
