Добавлена выгрузка СФОФ в .xlsx

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+#APPLICATION
+#server.port=8888
+
 # DATABASE
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/test_med
+#spring.datasource.url=jdbc:postgresql://192.168.12.18:5432/medsprav
 spring.datasource.username=meduser
 spring.datasource.password=superpw
 
