--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,5 @@
 driverClassName=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/test_med
+url=jdbc:postgresql://192.168.12.18:5432/medsprav
+#url=jdbc:postgresql://localhost:5432/test_med
 username=meduser
 password=superpw
