FYS загружается из xls c ФС и выгружается в DBF

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #APPLICATION
 #server.port=8888
+spring.servlet.multipart.max-file-size = 30MB
+spring.servlet.multipart.max-request-size = 30MB
 
 # DATABASE
 spring.datasource.driver-class-name=org.postgresql.Driver
