--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
             <artifactId>javadbf</artifactId>
             <version>1.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>javax.servlet</groupId>-->
 <!--            <artifactId>servlet-api</artifactId>-->
