+ логирование в файл событий входа и выхода

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,17 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# LOGGING:
+##??????????? ?????? ??????????? ??? ???????:
+logging.level.org.springframework=info
+logging.level.org.ktfoms.med=info
+logging.level.org.hibernate=info
+##??? ????? ????:
+logging.file.name = medsprav.log
+##??????????????? ??????? ????-??????? ? ?????????? ????:
+logging.pattern.dateformat = yyyy-MM-dd HH:mm:ss.SSS
+##??????????????? ??????? ????????? ???? (??? ??????? ? ????? ??????????????):
+#logging.pattern.console=  %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+#logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.logback.rollingpolicy.max-file-size=1MB
