+ публикация на сайт и логирование по справочнику лицензий

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,15 +22,19 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # LOGGING:
-##??????????? ?????? ??????????? ??? ???????:
+##Levels for packages:
 logging.level.org.springframework=info
 logging.level.org.ktfoms.med=info
 logging.level.org.hibernate=info
-##??? ????? ????:
+##logging path:
 logging.file.name = medsprav.log
-##??????????????? ??????? ????-??????? ? ?????????? ????:
+logging.logback.rollingpolicy.max-file-size=1MB
+##logging formats:
 logging.pattern.dateformat = yyyy-MM-dd HH:mm:ss.SSS
-##??????????????? ??????? ????????? ???? (??? ??????? ? ????? ??????????????):
 #logging.pattern.console=  %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 #logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-logging.logback.rollingpolicy.max-file-size=1MB
+
+
+# Paths:
+puths.publication_path = \\\\dss.oms.local\\data\\ASU\\
+#puths.publication_path = \\\\inet.oms.local\\downloads\\refbooks\\
