+ возм-ть заполнять спр.ПФ СМП по предыдущему месяцу

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ logging.level.org.hibernate=info
 ##logging path:
 logging.file.name = medsprav.log
 logging.logback.rollingpolicy.max-file-size=1MB
+logging.file.max-history = 15
 ##logging formats:
 logging.pattern.dateformat = yyyy-MM-dd HH:mm:ss.SSS
 #logging.pattern.console=  %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
